--- a/AI_Medical_Chatbot/AI_Medical_Chatbot.csproj
+++ b/AI_Medical_Chatbot/AI_Medical_Chatbot.csproj
@@ -2,13 +2,14 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.ML" Version="3.0.1" />
+    <PackageReference Include="Microsoft.ML.Tokenizers" Version="0.21.1" />
   </ItemGroup>
 
 </Project>
