--- a/AI_Medical_Chatbot/AI_Medical_Chatbot.csproj
+++ b/AI_Medical_Chatbot/AI_Medical_Chatbot.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.67" />
     <PackageReference Include="Microsoft.ML" Version="3.0.1" />
   </ItemGroup>
 
